--- a/package.json
+++ b/package.json
@@ -22,6 +22,17 @@
     "@fastify/static": "^6.12.0",
     "@loadable/component": "^5.15.3",
     "@loadable/server": "^5.16.1",
+    "@opentelemetry/api": "^1.4.1",
+    "@opentelemetry/core": "^1.13.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.39.0",
+    "@opentelemetry/instrumentation": "^0.39.0",
+    "@opentelemetry/instrumentation-fastify": "^0.32.5",
+    "@opentelemetry/instrumentation-http": "^0.39.0",
+    "@opentelemetry/propagator-b3": "^1.13.0",
+    "@opentelemetry/resources": "^1.13.0",
+    "@opentelemetry/sdk-trace-base": "^1.13.0",
+    "@opentelemetry/sdk-trace-node": "^1.13.0",
+    "@opentelemetry/semantic-conventions": "^1.13.0",
     "cls-hooked": "^4.2.2",
     "common-tags": "^1.8.2",
     "dotenv": "^16.3.1",
@@ -31,6 +42,7 @@
     "html-minifier": "^4.0.0",
     "json-schema-to-ts": "^2.9.2",
     "lodash": "^4.17.21",
+    "opentelemetry-instrumentation-sequelize": "^0.35.0",
     "pg": "^8.10.0",
     "pg-boss": "^9.0.3",
     "pg-hstore": "^2.3.4",
