--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "build:watch": "tsc -w",
     "build": "rm -rf dist && tsc",
-    "start": "node dist/index.js",
-    "schema:create": "ts-node scripts/generateJsonSchema.ts",
-    "lint": "eslint --max-warnings 0 'src/**/*.ts'",
-    "lint:fix": "eslint --fix 'src/**/*.ts'",
     "db:create:test": "sequelize db:create",
     "db:drop:test": "sequelize db:drop",
     "db:migrate:new": "npx sequelize migration:generate --name",
-    "db:migrate:test": "sequelize db:migrate"
+    "db:migrate:test": "sequelize db:migrate",
+    "start": "node dist/index.js",
+    "schema:create": "ts-node scripts/generateJsonSchema.ts",
+    "lint": "eslint . --max-warnings 0 --ext .ts,.tsx",
+    "lint:fix": "eslint . --max-warnings 0 --ext .ts,.tsx --fix",
+    "prettier": "npx prettier --check .",
+    "prettier:write": "npx prettier --write .",
+    "type-check": "tsc --noEmit --noUnusedLocals --noUnusedParameters",
+    "type-coverage": "type-coverage --strict --at-least 97",
+    "unused-exports": "ts-prune"
   },
   "author": "Dmitry Spiridonov",
   "license": "UNLICENSED",
@@ -23,20 +28,23 @@
     "@loadable/component": "^5.15.3",
     "@loadable/server": "^5.16.1",
     "@opentelemetry/api": "^1.4.1",
-    "@opentelemetry/core": "^1.13.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.39.0",
-    "@opentelemetry/instrumentation": "^0.39.0",
-    "@opentelemetry/instrumentation-fastify": "^0.32.5",
-    "@opentelemetry/instrumentation-http": "^0.39.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.40.2",
+    "@opentelemetry/core": "^1.19.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.46.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.39.1",
+    "@opentelemetry/instrumentation": "^0.39.1",
     "@opentelemetry/propagator-b3": "^1.13.0",
-    "@opentelemetry/resources": "^1.13.0",
-    "@opentelemetry/sdk-trace-base": "^1.13.0",
-    "@opentelemetry/sdk-trace-node": "^1.13.0",
-    "@opentelemetry/semantic-conventions": "^1.13.0",
+    "@opentelemetry/resources": "^1.19.0",
+    "@opentelemetry/sdk-metrics": "^1.19.0",
+    "@opentelemetry/sdk-node": "^0.46.0",
+    "@opentelemetry/sdk-trace-base": "^1.19.0",
+    "@opentelemetry/sdk-trace-node": "^1.19.0",
+    "@opentelemetry/semantic-conventions": "^1.19.0",
     "cls-hooked": "^4.2.2",
     "common-tags": "^1.8.2",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
+    "fastify-metrics": "^10.5.0",
     "fastify-plugin": "^4.5.1",
     "got": "^11.8.2",
     "html-minifier": "^4.0.0",
@@ -102,13 +110,14 @@
     "jest-extended": "^4.0.2",
     "jest-json-schema": "^6.1.0",
     "nock": "^13.3.6",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.2",
     "prettier": "^3.0.3",
     "sequelize-cli": "^6.3.0",
     "terser-webpack-plugin": "^5.3.9",
     "thread-loader": "^4.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "ts-prune": "^0.10.3",
     "typescript": "^5.2.2",
     "typescript-json-schema": "^0.62.0",
     "webpack-bundle-analyzer": "^4.10.1",
