--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,7 @@
-version: "3.8"
+version: "3.4"
+
+networks:
+  tessera-bridge:
 
 services:
   postgres:
@@ -6,8 +9,12 @@ services:
     image: postgres:12.3
     restart: always
     ports:
-      - 5432:5432
+      - "5432:5432"
+    expose:
+      - "5432"
     environment:
-      - POSTGRES_DB=tessera-db
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_USER=$PG_USER
+      - POSTGRES_PASSWORD=$PG_PASSWORD
+      - POSTGRES_DB=$PG_DATABASE
+    networks:
+      - tessera-bridge
