--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prettier:write": "npx prettier --write .",
     "schema:create": "ts-node scripts/generateJsonSchema.ts",
     "start": "node dist/index.js",
-    "static-checks": "npx run-p --npm-path npm --max-parallel 5 --aggregate-output depcheck type-check lint unused-exports type-coverage",
+    "static-checks": "run-p --max-parallel 5 --aggregate-output depcheck type-check lint unused-exports type-coverage",
     "test": "STAGE=test jest --coverage --verbose --runInBand",
     "type-check": "tsc --noEmit --noUnusedLocals --noUnusedParameters",
     "type-coverage": "type-coverage --strict --at-least 98",
@@ -56,7 +56,6 @@
     "json-schema": "^0.4.0",
     "lodash": "^4.17.21",
     "opentelemetry-instrumentation-sequelize": "^0.35.0",
-    "pg": "^8.10.0",
     "pg-boss": "^9.0.3",
     "pg-hstore": "^2.3.4",
     "pino": "^8.16.1",
@@ -67,18 +66,13 @@
     "regenerator-runtime": "^0.14.0",
     "sequelize": "^6.31.1",
     "styled-components": "^5.3.8",
-    "type-fest": "^4.8.3",
     "webpack": "^5.89.0",
     "webpack-merge": "^5.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
-    "@babel/plugin-syntax-jsx": "^7.23.3",
-    "@babel/plugin-transform-runtime": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.0",
-    "@faker-js/faker": "^8.2.0",
     "@loadable/babel-plugin": "^5.16.1",
     "@loadable/webpack-plugin": "^5.15.2",
     "@types/cls-hooked": "^4.3.8",
@@ -92,13 +86,9 @@
     "@types/loadable__webpack-plugin": "^5.7.6",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.9",
-    "@types/pg": "^8.10.7",
     "@types/react-dom": "^18.2.17",
-    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
-    "@types/webpack-bundle-analyzer": "^4.6.3",
     "@types/webpack-node-externals": "^3.0.4",
-    "@types/webpack-stats-plugin": "^0.3.5",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "babel-loader": "^8.3.0",
@@ -106,9 +96,7 @@
     "depcheck": "^1.4.7",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-next": "^14.0.1",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jest": "^27.6.0",
@@ -117,6 +105,7 @@
     "jest-extended": "^4.0.2",
     "jest-json-schema": "^6.1.0",
     "nock": "^13.3.6",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "sequelize-cli": "^6.3.0",
     "terser-webpack-plugin": "^5.3.9",
