--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@opentelemetry/semantic-conventions": "^1.19.0",
     "cls-hooked": "^4.2.2",
     "common-tags": "^1.8.2",
+    "core-js": "^3.35.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fastify": "^4.24.3",
