--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@fastify/autoload": "^5.8.0",
     "@fastify/helmet": "^11.1.1",
+    "@fastify/static": "^6.12.0",
     "@fastify/swagger": "^8.13.0",
     "@fastify/swagger-ui": "^2.0.1",
     "@loadable/component": "^5.15.3",
@@ -47,7 +48,6 @@
     "common-tags": "^1.8.2",
     "core-js": "^3.35.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "fastify": "^4.24.3",
     "fastify-metrics": "^10.5.0",
     "fastify-plugin": "^4.5.1",
