--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "pg-hstore": "^2.3.4",
     "pino": "^8.16.1",
     "pino-pretty": "^10.2.3",
+    "piscina": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -87,7 +88,7 @@
     "@types/loadable__server": "^5.12.10",
     "@types/loadable__webpack-plugin": "^5.7.6",
     "@types/lodash": "^4.14.200",
-    "@types/node": "^20.8.9",
+    "@types/node": "^20.11.10",
     "@types/react-dom": "^18.2.17",
     "@types/react-helmet": "^6.1.11",
     "@types/styled-components": "^5.1.34",
