--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,11 @@
     "strict": true,
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "skipLibCheck": true,
-    "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowJs": true,
     "checkJs": false,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*.ts", "src/index.d.ts", "src/types/*.js"],
+  "include": ["src/**/*.ts", "src/index.d.ts", "src/types/*.js", "src/workers/*.ts"],
 }
