feature/minio: added s3 bucket

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,11 @@ ADMIN_PASSWORD=admin
 PINO_LOG_LEVEL=debug
 
 OTEL_COLLECTOR_URL=http://localhost:4317
+
+USE_WORKER_THREADS=1
+USE_S3_BUCKET=1
+
+MINIO_HOST=0.0.0.0
+MINIO_PORT=9000
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
