--- a/package.json
+++ b/package.json
@@ -53,10 +53,13 @@
     "fastify-metrics": "^10.5.0",
     "fastify-plugin": "^4.5.1",
     "fs-extra": "^11.2.0",
+    "glob": "^10.3.10",
     "got": "^11.8.2",
     "html-minifier": "^4.0.0",
     "json-schema": "^0.4.0",
     "lodash": "^4.17.21",
+    "mime-types": "^2.1.35",
+    "minio": "^7.1.3",
     "opentelemetry-instrumentation-sequelize": "^0.35.0",
     "pg-boss": "^9.0.3",
     "pg-hstore": "^2.3.4",
@@ -86,9 +89,11 @@
     "@types/html-minifier": "^4.0.5",
     "@types/jest": "^29.5.6",
     "@types/jest-json-schema": "^6.1.3",
+    "@types/json-diff": "^1.0.3",
     "@types/loadable__server": "^5.12.10",
     "@types/loadable__webpack-plugin": "^5.7.6",
     "@types/lodash": "^4.14.200",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^20.11.10",
     "@types/react-dom": "^18.2.17",
     "@types/react-helmet": "^6.1.11",
@@ -96,7 +101,6 @@
     "@types/webpack-node-externals": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
-    "artillery": "^2.0.4",
     "babel-loader": "^8.3.0",
     "clean-webpack-plugin": "^4.0.0",
     "depcheck": "^1.4.7",
@@ -111,6 +115,7 @@
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
     "jest-json-schema": "^6.1.0",
+    "json-diff": "^1.0.6",
     "nock": "^13.3.6",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
