--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "start": "node dist/index.js",
     "static-checks": "run-p --max-parallel 5 --aggregate-output depcheck type-check lint unused-exports type-coverage",
     "test": "STAGE=test jest --coverage --verbose --runInBand",
-    "test:highload": "artillery run src/tests/highload/highload.yml",
     "type-check": "tsc --noEmit --noUnusedLocals --noUnusedParameters",
-    "type-coverage": "type-coverage --strict --at-least 98",
+    "type-coverage": "type-coverage --strict --at-least 99",
     "unused-exports": "ts-prune"
   },
   "author": "Dmitry Spiridonov",
@@ -102,13 +101,13 @@
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "babel-loader": "^8.3.0",
-    "clean-webpack-plugin": "^4.0.0",
     "depcheck": "^1.4.7",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-sonarjs": "^0.23.0",
     "husky": "^8.0.3",
