--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "prettier:write": "npx prettier --write .",
     "schema:create": "ts-node scripts/generateJsonSchema.ts",
     "start": "node dist/index.js",
+    "start:force": "node dist/index.js --force",
     "static-checks": "run-p --max-parallel 5 --aggregate-output depcheck type-check lint unused-exports type-coverage",
     "test": "STAGE=test jest --coverage --verbose --runInBand",
     "type-check": "tsc --noEmit --noUnusedLocals --noUnusedParameters",
-    "type-coverage": "type-coverage --strict --at-least 99",
+    "type-coverage": "type-coverage --strict --at-least 98",
     "unused-exports": "ts-prune"
   },
   "author": "Dmitry Spiridonov",
@@ -44,6 +45,7 @@
     "@opentelemetry/sdk-trace-base": "^1.19.0",
     "@opentelemetry/sdk-trace-node": "^1.19.0",
     "@opentelemetry/semantic-conventions": "^1.19.0",
+    "axios": "^1.6.7",
     "cls-hooked": "^4.2.2",
     "common-tags": "^1.8.2",
     "core-js": "^3.35.0",
@@ -54,18 +56,18 @@
     "folder-hash": "^4.0.4",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.10",
-    "got": "^11.8.2",
     "html-minifier": "^4.0.0",
     "json-schema": "^0.4.0",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
+    "minimist": "^1.2.8",
     "minio": "^7.1.3",
     "opentelemetry-instrumentation-sequelize": "^0.35.0",
     "pg-boss": "^9.0.3",
     "pg-hstore": "^2.3.4",
     "pino": "^8.16.1",
     "pino-pretty": "^10.2.3",
-    "piscina": "^4.3.0",
+    "rate-limiter-flexible": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -87,7 +89,6 @@
     "@types/common-tags": "^1.8.3",
     "@types/folder-hash": "^4.0.4",
     "@types/fs-extra": "^11.0.4",
-    "@types/got": "^9.6.12",
     "@types/html-minifier": "^4.0.5",
     "@types/jest": "^29.5.6",
     "@types/jest-json-schema": "^6.1.3",
@@ -96,6 +97,7 @@
     "@types/loadable__webpack-plugin": "^5.7.6",
     "@types/lodash": "^4.14.200",
     "@types/mime-types": "^2.1.4",
+    "@types/minimist": "^1.2.5",
     "@types/node": "^20.11.10",
     "@types/react-dom": "^18.2.17",
     "@types/react-helmet": "^6.1.11",
